--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   crypto: ^3.0.1
   http: ^0.13.3
+  redux_saga: ^3.0.5
+  flutter_redux: ^0.8.2
+  redux_logging: ^0.5.0
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
