--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_redux: ^0.8.2
   redux_logging: ^0.5.0
   fluttertoast: ^8.0.8
+  bordered_text: ^2.0.0
 
 dev_dependencies:
   flutter_test:
