--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   redux_logging: ^0.5.0
   fluttertoast: ^8.0.8
   bordered_text: ^2.0.0
+  routemaster: ^0.9.5
 
 dev_dependencies:
   flutter_test:
