--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   fluttertoast: ^8.0.8
   bordered_text: ^2.0.0
   routemaster: ^0.9.5
+  google_fonts: ^2.1.0
 
 dev_dependencies:
   flutter_test:
