--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   path_provider: ^2.0.0
   path: ^1.8.0
   url_launcher: ^6.0.11
+  carousel_slider: ^4.0.0
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
