--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   url_launcher: ^6.0.11
   carousel_slider: ^4.0.0
   provider: ^6.0.1
+  lottie: ^1.2.1
+  flutter_hooks: ^0.18.0
 
 dev_dependencies:
   flutter_test:
@@ -78,6 +80,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/images/no-image.png
+    - lib/assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
