--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   provider: ^6.0.1
   lottie: ^1.2.1
   flutter_hooks: ^0.18.0
+  redux_persist_flutter: ^0.9.0
 
 dev_dependencies:
   flutter_test:
